Moved to TOML configuration, removed application.properties